Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2735

sanity.sh test_151: NOT IN CACHE: before: 337, after: 337

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 6639

      This issue was created by maloo for Li Wei <liwei@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/b8f32682-6c5f-11e2-91d6-52540035b04c.

      The sub-test test_151 failed with the following error:

      NOT IN CACHE: before: 337, after: 337

      Info required for matching: sanity 151

      == sanity test 151: test cache on oss and controls ================================= 21:28:47 (1359696527)
      CMD: client-21-ib /usr/sbin/lctl get_param -n obdfilter.lustre-OST*.read_cache_enable 		osd-*.lustre-OST*.read_cache_enable 2>&1
      CMD: client-21-ib /usr/sbin/lctl get_param -n obdfilter.lustre-OST*.read_cache_enable 		osd-*.lustre-OST*.read_cache_enable 2>&1
      CMD: client-21-ib /usr/sbin/lctl set_param -n obdfilter.lustre-OST*.writethrough_cache_enable=1 		osd-*.lustre-OST*.writethrough_cache_enable=1 2>&1
      3+0 records in
      3+0 records out
      12288 bytes (12 kB) copied, 0.00445821 s, 2.8 MB/s
      CMD: client-21-ib /usr/sbin/lctl get_param -n obdfilter.lustre-OST*.stats 		osd-*.lustre-OST*.stats 2>&1
      CMD: client-21-ib /usr/sbin/lctl get_param -n obdfilter.lustre-OST*.stats 		osd-*.lustre-OST*.stats 2>&1
       sanity test_151: @@@@@@ FAIL: NOT IN CACHE: before: 337, after: 337 
      

            keith Keith Mannthey (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: